tests/NormalTests/paczka1/fuzzy1/83069533.err
Error in line 1: BjD0xgJ7oL S342 96,5
Error in line 4: S342 S342 57,9
Error in line 12: S342 S683 96,0
Error in line 21: bxh3pR4Ch A422 83,4
Error in line 5: TiKD7XKlR7k S683 39,7
Error in line 33: bxh3pR4Ch S591 79,4
